--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset='UTF-8'>
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>MyDigiByte - Decentralized DigiByte Wallet</title>
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css65a5.css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-  <link rel="stylesheet" href="https://mydigibyte.ga/https://mydigibyte.ga/assets/css-plugins/include.css">
-  <link rel="stylesheet" href="https://mydigibyte.ga/https://mydigibyte.ga/assets/css-default/style/style.css">
-  <link rel="stylesheet" href="https://mydigibyte.ga/https://mydigibyte.ga/assets/css-default/left-orientation/left-orientation.css">
+  <link rel="stylesheet" href="https://mydigibyte.ga/assets/css-plugins/include.css">
+  <link rel="stylesheet" href="https://mydigibyte.ga/assets/css-default/style/style.css">
+  <link rel="stylesheet" href="https://mydigibyte.ga/assets/css-default/left-orientation/left-orientation.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
