--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>MyDigiByte - Decentralized DigiByte Wallet</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css65a5.css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-  <link rel="stylesheet" href="https://mydigibyte.ga/assets/css-plugins/include.css">
-  <link rel="stylesheet" href="https://mydigibyte.ga/assets/css-default/style/style.css">
-  <link rel="stylesheet" href="https://mydigibyte.ga/assets/css-default/left-orientation/left-orientation.css">
+  <link rel="stylesheet" href="assets/css-plugins/include.css">
+  <link rel="stylesheet" href="assets/css-default/style/style.css">
+  <link rel="stylesheet" href="assets/css-default/left-orientation/left-orientation.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -24,7 +24,7 @@
       </div>
     </div>
   </section>
-  <section class="el-bg-block resp-bg" style="background-image:url(https://mydigibyte.ga/assets/img/background/bg-square.png)">
+  <section class="el-bg-block resp-bg" style="background-image:url(assets/img/background/bg-square.png)">
     <h2 class='display-none'>Display none</h2>
     <div class="bg-block-holder z-index-10" id='bg-block-holder'></div>
     <div class="youtube-player z-index-15"></div>
@@ -38,7 +38,7 @@
         <div class="vert-helper"></div>
         <div class="content-holder for-vert-align">
           <div class="top-text">
-            <div class="logo-block duration-12 translate-from-bottom-15 translate-0"><img src="https://mydigibyte.ga/assets/img/logo/logo.png" style="width:271px" alt=""></div><br>
+            <div class="logo-block duration-12 translate-from-bottom-15 translate-0"><img src="assets/img/logo/logo.png" style="width:271px" alt=""></div><br>
             <h1 class="big-text duration-12 translate-from-bottom-13 translate-0" style="font-size:32px"><span id="typed-element">Decentralized, Open-Source, Secure</span></h1><span class="sub-text duration-12 translate-from-bottom-11 translate-0">MyDigiByte is a secure, open-source, community-funded, client-side wallet interface for DigiByte.</span></div>
           <div
             class="counter duration-12 translate-from-bottom-9 translate-0">
@@ -104,18 +104,18 @@
       </div>
     </div>
   </div>
-  <script src='https://mydigibyte.ga/assets/js/mobile-detect/mobile-detect.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/jquery/jquery.min.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/scrollTo/jquery.scrollTo.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/popper/popper.min.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/bootstrap/bootstrap.min.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/magnific-popup/jquery.magnific-popup.min.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/vegas-slideshow/vegas.min.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/owl-carousel/owl.carousel.min.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/countdown/countdown.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/typed/typed.min.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js'></script>
-  <script src='https://mydigibyte.ga/assets/js/canvas/waterpipe.js'></script>
+  <script src='assets/js/mobile-detect/mobile-detect.js'></script>
+  <script src='assets/js/jquery/jquery.min.js'></script>
+  <script src='assets/js/scrollTo/jquery.scrollTo.js'></script>
+  <script src='assets/js/popper/popper.min.js'></script>
+  <script src='assets/js/bootstrap/bootstrap.min.js'></script>
+  <script src='assets/js/magnific-popup/jquery.magnific-popup.min.js'></script>
+  <script src='assets/js/vegas-slideshow/vegas.min.js'></script>
+  <script src='assets/js/owl-carousel/owl.carousel.min.js'></script>
+  <script src='assets/js/countdown/countdown.js'></script>
+  <script src='assets/js/typed/typed.min.js'></script>
+  <script src='assets/js/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js'></script>
+  <script src='assets/js/canvas/waterpipe.js'></script>
   <script>
     var canvasAnimation = [false, "smoke"],
       animationInMobile = false,
@@ -141,7 +141,7 @@
       typed = [false, ["", ""]],
       typedInMobile = [false, ""];
   </script>
-  <script src='https://mydigibyte.ga/assets/js/main/main.js'></script>
+  <script src='assets/js/main/main.js'></script>
 </body>
 
 </html>
